wwpdb/utils/nmr/mr/CyanaEMRParser.py
# Generated from CyanaEMRParser.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CyanaEMRParser ( Parser ):

    grammarFileName = "CyanaEMRParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "'NOEUPP'", "'NOELOW'", "'TYPE'", "<INVALID>", 
                     "'OR'", "'SSBOND'", "<INVALID>", "'HBOND'", "'LINK'", 
                     "<INVALID>", "'VAR'", "'UNSET'", "<INVALID>", "'PRINT'", 
                     "'RESIDUE'", "'MAPPING'", "'AMBIG'", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'ATOM1'", "'ATOM2'", "'RESIDUE1'", "'RESIDUE2'" ]

    symbolicNames = [ "<INVALID>", "Ambig_code", "Integer", "Float", "Float_DecimalComma", 
                      "Orientation_header", "Tensor_header", "SMCLN_COMMENT", 
                      "COMMENT", "NoeUpp", "NoeLow", "Type", "Equ_op", "Or", 
                      "Ssbond", "Ssbond_resids", "Hbond", "Link", "Atom_stereo", 
                      "Var", "Unset", "SetVar", "Print", "Residue", "Mapping", 
                      "Ambig", "Capital_integer", "Integer_capital", "Simple_name", 
                      "SPACE", "ENCLOSE_COMMENT", "SECTION_COMMENT", "LINE_COMMENT", 
                      "Any_name", "SPACE_CM", "RETURN_CM", "Atom1", "Atom2", 
                      "Residue1", "Residue2", "Equ_op_HB", "Integer_HB", 
                      "Simple_name_HB", "SPACE_HB", "RETURN_HB", "LINE_COMMENT_HB", 
                      "Double_quote_string", "SPACE_PR", "RETURN_PR", "LINE_COMMENT_PR", 
                      "Simple_name_VA", "SPACE_VA", "RETURN_VA", "LINE_COMMENT_VA", 
                      "Ambig_code_MP", "Integer_MP", "Simple_name_MP", "Equ_op_MP", 
                      "SPACE_MP", "RETURN_MP", "LINE_COMMENT_MP" ]

    RULE_cyana_emr = 0
    RULE_comment = 1
    RULE_distance_restraints = 2
    RULE_distance_restraint = 3
    RULE_torsion_angle_restraints = 4
    RULE_torsion_angle_restraint = 5
    RULE_rdc_restraints = 6
    RULE_rdc_parameter = 7
    RULE_rdc_restraint = 8
    RULE_pcs_restraints = 9
    RULE_pcs_parameter = 10
    RULE_pcs_restraint = 11
    RULE_cco_restraints = 12
    RULE_cco_restraint = 13
    RULE_ssbond_macro = 14
    RULE_hbond_macro = 15
    RULE_link_statement = 16
    RULE_stereoassign_macro = 17
    RULE_declare_variable = 18
    RULE_set_variable = 19
    RULE_unset_variable = 20
    RULE_print_macro = 21
    RULE_unambig_atom_name_mapping = 22
    RULE_mapping_list = 23
    RULE_ambig_atom_name_mapping = 24
    RULE_ambig_list = 25
    RULE_number = 26
    RULE_gen_res_num = 27
    RULE_gen_simple_name = 28
    RULE_gen_atom_name = 29

    ruleNames =  [ "cyana_emr", "comment", "distance_restraints", "distance_restraint", 
                   "torsion_angle_restraints", "torsion_angle_restraint", 
                   "rdc_restraints", "rdc_parameter", "rdc_restraint", "pcs_restraints", 
                   "pcs_parameter", "pcs_restraint", "cco_restraints", "cco_restraint", 
                   "ssbond_macro", "hbond_macro", "link_statement", "stereoassign_macro", 
                   "declare_variable", "set_variable", "unset_variable", 
                   "print_macro", "unambig_atom_name_mapping", "mapping_list", 
                   "ambig_atom_name_mapping", "ambig_list", "number", "gen_res_num", 
                   "gen_simple_name", "gen_atom_name" ]

    EOF = Token.EOF
    Ambig_code=1
    Integer=2
    Float=3
    Float_DecimalComma=4
    Orientation_header=5
    Tensor_header=6
    SMCLN_COMMENT=7
    COMMENT=8
    NoeUpp=9
    NoeLow=10
    Type=11
    Equ_op=12
    Or=13
    Ssbond=14
    Ssbond_resids=15
    Hbond=16
    Link=17
    Atom_stereo=18
    Var=19
    Unset=20
    SetVar=21
    Print=22
    Residue=23
    Mapping=24
    Ambig=25
    Capital_integer=26
    Integer_capital=27
    Simple_name=28
    SPACE=29
    ENCLOSE_COMMENT=30
    SECTION_COMMENT=31
    LINE_COMMENT=32
    Any_name=33
    SPACE_CM=34
    RETURN_CM=35
    Atom1=36
    Atom2=37
    Residue1=38
    Residue2=39
    Equ_op_HB=40
    Integer_HB=41
    Simple_name_HB=42
    SPACE_HB=43
    RETURN_HB=44
    LINE_COMMENT_HB=45
    Double_quote_string=46
    SPACE_PR=47
    RETURN_PR=48
    LINE_COMMENT_PR=49
    Simple_name_VA=50
    SPACE_VA=51
    RETURN_VA=52
    LINE_COMMENT_VA=53
    Ambig_code_MP=54
    Integer_MP=55
    Simple_name_MP=56
    Equ_op_MP=57
    SPACE_MP=58
    RETURN_MP=59
    LINE_COMMENT_MP=60

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Cyana_emrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(CyanaEMRParser.EOF, 0)

        def Orientation_header(self, i:int=None):
            if i is None:
                return self.getTokens(CyanaEMRParser.Orientation_header)
            else:
                return self.getToken(CyanaEMRParser.Orientation_header, i)

        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.CommentContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.CommentContext,i)


        def distance_restraints(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Distance_restraintsContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Distance_restraintsContext,i)


        def torsion_angle_restraints(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Torsion_angle_restraintsContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Torsion_angle_restraintsContext,i)


        def rdc_restraints(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Rdc_restraintsContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Rdc_restraintsContext,i)


        def pcs_restraints(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Pcs_restraintsContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Pcs_restraintsContext,i)


        def cco_restraints(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Cco_restraintsContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Cco_restraintsContext,i)


        def ssbond_macro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Ssbond_macroContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Ssbond_macroContext,i)


        def hbond_macro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Hbond_macroContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Hbond_macroContext,i)


        def link_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Link_statementContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Link_statementContext,i)


        def stereoassign_macro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Stereoassign_macroContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Stereoassign_macroContext,i)


        def declare_variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Declare_variableContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Declare_variableContext,i)


        def set_variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Set_variableContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Set_variableContext,i)


        def unset_variable(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Unset_variableContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Unset_variableContext,i)


        def print_macro(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Print_macroContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Print_macroContext,i)


        def unambig_atom_name_mapping(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Unambig_atom_name_mappingContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Unambig_atom_name_mappingContext,i)


        def ambig_atom_name_mapping(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Ambig_atom_name_mappingContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Ambig_atom_name_mappingContext,i)


        def Tensor_header(self, i:int=None):
            if i is None:
                return self.getTokens(CyanaEMRParser.Tensor_header)
            else:
                return self.getToken(CyanaEMRParser.Tensor_header, i)

        def getRuleIndex(self):
            return CyanaEMRParser.RULE_cyana_emr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCyana_emr" ):
                listener.enterCyana_emr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCyana_emr" ):
                listener.exitCyana_emr(self)




    def cyana_emr(self):

        localctx = CyanaEMRParser.Cyana_emrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_cyana_emr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 218055012) != 0):
                self.state = 82
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 60
                    self.match(CyanaEMRParser.Orientation_header)
                    pass

                elif la_ == 2:
                    self.state = 62 
                    self._errHandler.sync(self)
                    _alt = 1
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt == 1:
                            self.state = 61
                            self.match(CyanaEMRParser.Tensor_header)

                        else:
                            raise NoViableAltException(self)
                        self.state = 64 
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

                    pass

                elif la_ == 3:
                    self.state = 66
                    self.comment()
                    pass

                elif la_ == 4:
                    self.state = 67
                    self.distance_restraints()
                    pass

                elif la_ == 5:
                    self.state = 68
                    self.torsion_angle_restraints()
                    pass

                elif la_ == 6:
                    self.state = 69
                    self.rdc_restraints()
                    pass

                elif la_ == 7:
                    self.state = 70
                    self.pcs_restraints()
                    pass

                elif la_ == 8:
                    self.state = 71
                    self.cco_restraints()
                    pass

                elif la_ == 9:
                    self.state = 72
                    self.ssbond_macro()
                    pass

                elif la_ == 10:
                    self.state = 73
                    self.hbond_macro()
                    pass

                elif la_ == 11:
                    self.state = 74
                    self.link_statement()
                    pass

                elif la_ == 12:
                    self.state = 75
                    self.stereoassign_macro()
                    pass

                elif la_ == 13:
                    self.state = 76
                    self.declare_variable()
                    pass

                elif la_ == 14:
                    self.state = 77
                    self.set_variable()
                    pass

                elif la_ == 15:
                    self.state = 78
                    self.unset_variable()
                    pass

                elif la_ == 16:
                    self.state = 79
                    self.print_macro()
                    pass

                elif la_ == 17:
                    self.state = 80
                    self.unambig_atom_name_mapping()
                    pass

                elif la_ == 18:
                    self.state = 81
                    self.ambig_atom_name_mapping()
                    pass


                self.state = 86
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 87
            self.match(CyanaEMRParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMENT(self):
            return self.getToken(CyanaEMRParser.COMMENT, 0)

        def RETURN_CM(self):
            return self.getToken(CyanaEMRParser.RETURN_CM, 0)

        def EOF(self):
            return self.getToken(CyanaEMRParser.EOF, 0)

        def Any_name(self, i:int=None):
            if i is None:
                return self.getTokens(CyanaEMRParser.Any_name)
            else:
                return self.getToken(CyanaEMRParser.Any_name, i)

        def getRuleIndex(self):
            return CyanaEMRParser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)




    def comment(self):

        localctx = CyanaEMRParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_comment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(CyanaEMRParser.COMMENT)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==33:
                self.state = 90
                self.match(CyanaEMRParser.Any_name)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 96
            _la = self._input.LA(1)
            if not(_la==-1 or _la==35):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Distance_restraintsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def distance_restraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Distance_restraintContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Distance_restraintContext,i)


        def getRuleIndex(self):
            return CyanaEMRParser.RULE_distance_restraints

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDistance_restraints" ):
                listener.enterDistance_restraints(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDistance_restraints" ):
                listener.exitDistance_restraints(self)




    def distance_restraints(self):

        localctx = CyanaEMRParser.Distance_restraintsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_distance_restraints)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 98
                    self.distance_restraint()

                else:
                    raise NoViableAltException(self)
                self.state = 101 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Distance_restraintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def gen_res_num(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Gen_res_numContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Gen_res_numContext,i)


        def gen_simple_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Gen_simple_nameContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Gen_simple_nameContext,i)


        def gen_atom_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Gen_atom_nameContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Gen_atom_nameContext,i)


        def number(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.NumberContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.NumberContext,i)


        def getRuleIndex(self):
            return CyanaEMRParser.RULE_distance_restraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDistance_restraint" ):
                listener.enterDistance_restraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDistance_restraint" ):
                listener.exitDistance_restraint(self)




    def distance_restraint(self):

        localctx = CyanaEMRParser.Distance_restraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_distance_restraint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.gen_res_num()
            self.state = 104
            self.gen_simple_name()
            self.state = 105
            self.gen_atom_name()
            self.state = 106
            self.gen_res_num()
            self.state = 107
            self.gen_simple_name()
            self.state = 108
            self.gen_atom_name()
            self.state = 109
            self.number()
            self.state = 111
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 110
                self.number()


            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 113
                self.number()


            self.state = 117
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.state = 116
                self.number()


            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 119
                self.number()


            self.state = 123
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 122
                self.number()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Torsion_angle_restraintsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def torsion_angle_restraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Torsion_angle_restraintContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Torsion_angle_restraintContext,i)


        def getRuleIndex(self):
            return CyanaEMRParser.RULE_torsion_angle_restraints

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTorsion_angle_restraints" ):
                listener.enterTorsion_angle_restraints(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTorsion_angle_restraints" ):
                listener.exitTorsion_angle_restraints(self)




    def torsion_angle_restraints(self):

        localctx = CyanaEMRParser.Torsion_angle_restraintsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_torsion_angle_restraints)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 125
                    self.torsion_angle_restraint()

                else:
                    raise NoViableAltException(self)
                self.state = 128 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Torsion_angle_restraintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def gen_res_num(self):
            return self.getTypedRuleContext(CyanaEMRParser.Gen_res_numContext,0)


        def gen_simple_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Gen_simple_nameContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Gen_simple_nameContext,i)


        def number(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.NumberContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.NumberContext,i)


        def Type(self):
            return self.getToken(CyanaEMRParser.Type, 0)

        def Equ_op(self):
            return self.getToken(CyanaEMRParser.Equ_op, 0)

        def Integer(self):
            return self.getToken(CyanaEMRParser.Integer, 0)

        def Or(self):
            return self.getToken(CyanaEMRParser.Or, 0)

        def getRuleIndex(self):
            return CyanaEMRParser.RULE_torsion_angle_restraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTorsion_angle_restraint" ):
                listener.enterTorsion_angle_restraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTorsion_angle_restraint" ):
                listener.exitTorsion_angle_restraint(self)




    def torsion_angle_restraint(self):

        localctx = CyanaEMRParser.Torsion_angle_restraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_torsion_angle_restraint)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.gen_res_num()
            self.state = 131
            self.gen_simple_name()
            self.state = 132
            self.gen_simple_name()
            self.state = 133
            self.number()
            self.state = 134
            self.number()
            self.state = 136
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 135
                self.number()


            self.state = 141
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11:
                self.state = 138
                self.match(CyanaEMRParser.Type)
                self.state = 139
                self.match(CyanaEMRParser.Equ_op)
                self.state = 140
                self.match(CyanaEMRParser.Integer)


            self.state = 144
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13:
                self.state = 143
                self.match(CyanaEMRParser.Or)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rdc_restraintsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def rdc_parameter(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Rdc_parameterContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Rdc_parameterContext,i)


        def Orientation_header(self, i:int=None):
            if i is None:
                return self.getTokens(CyanaEMRParser.Orientation_header)
            else:
                return self.getToken(CyanaEMRParser.Orientation_header, i)

        def comment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.CommentContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.CommentContext,i)


        def rdc_restraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.Rdc_restraintContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.Rdc_restraintContext,i)


        def getRuleIndex(self):
            return CyanaEMRParser.RULE_rdc_restraints

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRdc_restraints" ):
                listener.enterRdc_restraints(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRdc_restraints" ):
                listener.exitRdc_restraints(self)




    def rdc_restraints(self):

        localctx = CyanaEMRParser.Rdc_restraintsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_rdc_restraints)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 146
                    self.rdc_parameter()

                else:
                    raise NoViableAltException(self)
                self.state = 149 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

            self.state = 154 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 154
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [5]:
                        self.state = 151
                        self.match(CyanaEMRParser.Orientation_header)
                        pass
                    elif token in [8]:
                        self.state = 152
                        self.comment()
                        pass
                    elif token in [2, 26, 27]:
                        self.state = 153
                        self.rdc_restraint()
                        pass
                    else:
                        raise NoViableAltException(self)


                else:
                    raise NoViableAltException(self)
                self.state = 156 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Rdc_parameterContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Integer(self, i:int=None):
            if i is None:
                return self.getTokens(CyanaEMRParser.Integer)
            else:
                return self.getToken(CyanaEMRParser.Integer, i)

        def number(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CyanaEMRParser.NumberContext)
            else:
                return self.getTypedRuleContext(CyanaEMRParser.NumberContext,i)


        def Capital_integer(self):
            return self.getToken(CyanaEMRParser.Capital_integer, 0)

        def Integer_capital(self):
            return self.getToken(CyanaEMRParser.Integer_capital, 0)

        def Simple_name(self):
            return self.getToken(CyanaEMRParser.Simple_name, 0)

        def getRuleIndex(self):
            return CyanaEMRParser.RULE_rdc_parameter
